Fix overflow to hightlight in large screens

--- a/src/styl/_hightlight.styl
+++ b/src/styl/_hightlight.styl
@@ -18,6 +18,8 @@ pre
         font-family 'Monaco','Consolas','Menlo',monospace
 
 .highlight
+    +above(cut)
+        word-wrap break-word
     .hll
         background-color #333
     .c
